--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   display: block;
   list-style: none;
 }</style>
+      <style type="text/css">summary::-webkit-details-marker {
+  display:none;
+}</style>
 <style type="text/css">h1 {
   padding: 1rem 2rem;
   border-left: 5px solid #000;
