--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ border-bottom:2px solid #F7CB4D;
     <div>改革案|学生は頭髪検査なし-先生は逆に頭髪検査あり</div>
               <td align="left" valign="bottom"><hr width="100%" size="1"></td>
         <div>ご意見|テストがむずい</div>
-    <div>改革案|教科書やノートを見て説いてもいいことにする</div>
+    <div>改革案|教科書やノートを見て解いてもいいことにする</div>
                   <td align="left" valign="bottom"><hr width="100%" size="1"></td>
         <div>ご意見|化粧したい</div>
     <div>改革案|してもよいことにする</div>                  <td align="left" valign="bottom"><hr width="100%" size="1"></td>
