--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@ border-bottom:2px solid #F7CB4D;
     <div>改革案|6月下旬から7月上旬まで週4でプールの授業にする</div>
 <td align="left" valign="bottom"><hr width="100%" size="1"></td>
     <div>ご意見|担任を変えてほしい</div>
-    <div>改革案|1ヶ月に1回担任がランダムに変わる仕組みにする</div> </details>
+    <div>改革案|1ヶ月に1回担任がランダムに変わる仕組みにする</div>
+ <td align="left" valign="bottom"><hr width="100%" size="1"></td>
+    <div>ご意見|ゲイを増やせ</div>
+    <div>改革案|クラスにゲイを作らないと卒業できないようにする</div> </details>
 <details>
   <summary><div style="text-align: center;"><p><img src="https://lh3.googleusercontent.com/3Yi5In_VYI1Gsbpi0MJ6j4XDYQHCuh8rKu9JWkoWA_Tjw75Yot6wJx8oKf_vUGdLvs2nspOHMyIuBWZfijEr_QTmnB6tA-ibR_Ujn1eDmfUe-5NBuygbZn5owe2dKix8Jv6bV18YkkPQcyX5iA3wiv7RP90VlQoyoRRTzY_Zj1qZKnGYInIosCz71PuU" width="880"></div></p></summary><font size="5"><div>ご意見|アルバイトをしたい</div>
     <div>改革案|してもよいことにする</div>
